<resources>
    <string name="app_name">MoonApp</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Start screen</string>
    <string name="second_fragment_label">Sign in screen</string>
    <string name="main_screen_label">Main screen</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_up_google">Зарегистрироваться c Google</string>
    <string name="sign_up_facebook">Зарегистрироваться с Facebook</string>
    <string name="sign_in">Войти</string>
    <string name="user_name_hint">Имя пользователя</string>
    <string name="user_password_hint">Пароль</string>
    <string name="user_name_error">Введите имя пользователя</string>
    <string name="user_pass_error">Введите пароль</string>
    <string name="log_in_snackbar">Логин и пароль не совпадают</string>
    <string name="moon_day_desc">лунный день</string>
    <string name="moon_day_error">Ошибка при вычислении лунного дня. Проверьте подключение к интернету</string>
    <string name="lock_text">Чтобы воспользоваться медитациями, оплатите подписку</string>
</resources>