<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/StartScreenFragment">

    <fragment
        android:id="@+id/StartScreenFragment"
        android:name="com.example.moonapp.ui.StartScreenFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_start_screen">
        <action
            android:id="@+id/action_StartScreenFragment_to_SignInFragment"
            app:destination="@id/SignInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_StartScreenFragment_to_MainScreen"
            app:destination="@id/MainScreen" />
    </fragment>
    <fragment
        android:id="@+id/SignInFragment"
        android:name="com.example.moonapp.ui.SignInFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_SignInFragment_to_MainScreen"
            app:destination="@id/MainScreen" />
    </fragment>
    <fragment
        android:id="@+id/MainScreen"
        android:name="com.example.moonapp.ui.MainScreenFragment"
        android:label="@string/main_screen_label"
        tools:layout="@layout/main_screen_fragment" />
</navigation>