<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/layout_horizontal_padding"
    android:paddingVertical="@dimen/layout_vertical_padding"
    tools:context=".ui.StartScreenFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_moon_logo"
        app:layout_constraintEnd_toStartOf="@id/app_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:layout_height="0dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="30dp"
            app:sliderIndicatorMarginTop="30dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderScrollTimeInSec="2"
            app:sliderStartAutoCycle="true" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/app_name"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/app_logo"
        app:layout_constraintTop_toTopOf="@id/app_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_facebook"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_google"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>